--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -127,6 +127,16 @@
                 <svg id="svg1_3"></svg >
                 <figcaption><b>Figura 1.3</b> Vectorers de posición \(\vec r_1\) y \(\vec r_2\), vector desplazamiento \(\vec \Delta r\) y vectores velocidad \(\vec v_1\) y \(\vec v_2\) de un móvil.</figcaption>
             </figure>
+            <p>
+                Se define la <strong>velocidad media</strong> \(\vec v_med\) en el intervalo de tiempo \(\Delta t\) como:
+            </p>
+            <p>$$ \vec v_med = \frac{\Delta r}{\Delta t} $$</p>
+            <p>
+                La <strong>velocidad instantánea</strong> \(\vec v) se define como:
+            </p>
+            <p>$$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta r}{\Delta t} $$</p>
+            <p>Es decir, como la rapidez del cambio del vector de posición \(\vec r\) respecto al tiempo.</p>
+            <p>Este vector es tangente a la trayectoria y su sentido es el del movimiento.</p>
         </article>
     </body>
 </html>
