--- a/vectors_es.html
+++ b/vectors_es.html
@@ -313,7 +313,7 @@
                     <div  class="right" id="[1.15]">[1.15]</div>
                 </div>
                 <p>
-                    Done \(\theta\) es el ángulo entre \(\vec v\) y \(\vec w\).
+                    Donde \(\theta\) es el ángulo entre \(\vec v\) y \(\vec w\).
                 </p>
                 <p>
                     Ahora bien, si consideramos la expresión [1.12] del producto escalar de \(\vec v\) y \(\vec w\), la magnitud de \(proj_v \vec w\) también puede expresarse como:
