--- a/vectors_es.html
+++ b/vectors_es.html
@@ -75,7 +75,7 @@
                     Un vector está caracterizado:
                     <ul>
                         <li>
-                            por su magnitud (o longitud), que es igual a la longitud del segmento \(\overline{AB}\) y se denota por \(\Vert\vec v\Vert\),
+                            por su <strong>magnitud (o módulo)</strong>, que es igual a la longitud del segmento \(\overline{AB}\) y se denota por \(\Vert\vec v\Vert\),
                         </li>
                         <li>
                             y por su <strong>dirección</strong>: de A hacia B.
@@ -85,10 +85,10 @@
             </section>
             <section><h3>1.3 Suma de Vectores, Método Gráfico:</h3>    
                 <p>
-                    La suma de dos vectores \(vec a\) y \(vec b\), o suma de vectores, produce un tercer vector (\overrightarrow{a+b}\). 
+                    La suma de dos vectores \(\vec a\) y \(\vec b\), o suma de vectores, produce un tercer vector \(\overrightarrow{a+b}\). 
                 </p>
                 <p>
-                    Para encontrar (\overrightarrow{a+b}\), primero dibujamos el vector \(vec a\), y desde el final de \(vec a\), dibujamos \(vec b\). En otras palabras, hacemos qeu el origen de \(vec b\) coincida con el final \(vec a\). Esta posición corresponde a la noción de que nos movemos a lo largo del primer vector y luego, desde su punto terminal, nos movemos a lo largo del segundo vector. La suma vectorial tiene la propiedad conmutativa; Entonces, si primero dibujamos un vector \(vec b\), y desde el final de \(vec b\), dibujamos el vector \(vec a\), obtendremos (\overrightarrow{b+a}\), que es igual a (\overrightarrow{a+b}\). 
+                    Para encontrar \(\overrightarrow{a+b}\), primero dibujamos el vector \(\vec a\), y desde el final de \(\vec a\), dibujamos \(\vec b\). En otras palabras, hacemos qeu el origen de \(\vec b\) coincida con el final \(\vec a\). Esta posición corresponde a la noción de que nos movemos a lo largo del primer vector y luego, desde su punto terminal, nos movemos a lo largo del segundo vector. La suma vectorial tiene la propiedad conmutativa; Entonces, si primero dibujamos un vector \(vec b\), y desde el final de \(\vec b\), dibujamos el vector \(\vec a\), obtendremos \(\overrightarrow{b+a}\), que es igual a \(\overrightarrow{a+b}\). 
                 </p>
                 <figure class="centered">
                     <svg id="svg1_2"></svg >
