--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -122,21 +122,48 @@
                 <p>
                     Supongamos que cierto punto material P se traslada en un intervalo de tiempo \(\Delta t\) desde un punto 1 hata un punto 2. Caracterizados respectivamente por los vectores de posición \(\vec r_1\) y \(\vec r_2\).
                 </p>
+                <figure class="centered">
+                    <svg id="svg1_3"></svg >
+                    <figcaption><b>Figura 1.3</b> Vectorers de posición \(\vec r_1\) y \(\vec r_2\), vector desplazamiento \(\vec \Delta r\) y vectores velocidad \(\vec v_1\) y \(\vec v_2\) de un móvil.</figcaption>
+                </figure>
+                <p>
+                    Se define la <strong>velocidad media</strong> \(\vec v_{med}\) en el intervalo de tiempo \(\Delta t\) como:
+                </p>
+                <p>$$ \vec v_{med} = \frac{\Delta \vec r}{\Delta t} $$</p>
+                <p>
+                    La <strong>velocidad instantánea</strong> \(\vec v\) se define como:
+                </p>
+                <p>$$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta r}{\Delta t} $$</p>
+                <p>Es decir, como la rapidez del cambio del vector de posición \(\vec r\) respecto al tiempo.</p>
+                <p>Este vector es tangente a la trayectoria y su sentido es el del movimiento.</p>
+                <p>
+                    Si referimos la velocidad instantánea a la trayectoria, la velocidad instantánea puede desarrollarse en la forma siguiente:  
+                </p>
+                <p>
+                    $$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \frac{\Delta s}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \lim_{\Delta t\to 0} \frac{\Delta s}{\Delta t}$$
+                </p>
+                <p>
+                    A cada vector desplazamiento \(\Delta \vec r\) le corresponde una longitud de trayectoria \(\Delta s\), para cada intervalo de tiempo \(\Delta t\). Normalmente, \(\Delta s > \vert \Delta \vec r \vert \), pero al considerar intervalos de tiempo \(\Delta t\) que tienden a cero, ambos valores tienden a coincidir. Es decir, si \(\Delta t \to 0\), el arco \(\Delta s \to \) la cuerda \(\vert \Delta \vec r \vert \). Y el primer límite será un vector de módulo unidad, tangente a la trayectoria y sentido el del movimiento. Vector que simbolizaremos por \(\vec \tau\).
+                </p>
+                <p>
+                    El segundo límite es un escalar y representa el módulo de la velocidad instantánea \(\vert \vec r \vert\), se denomina <strong>celeridad</strong> y se representa por \(v\).
+                </p>
+                <p>Así pues,</p>
+                <p>$$ \vec v = v\cdot \vec\tau $$</p>
+                <p>
+                    Si referimos la velocidad instantáne a los componentes del vector posición, podemos expresar la velocidad instantánea de la siguient forma:
+                </p>
+                <p>$$ \vec v = \frac {d\vec r}{dt} = \frac {dx}{dt}\vec i + \frac {dy}{dt}\vec j + \frac {dz}{dt}\vec k$$</p>
+                <p>O sea,</p>
+                <p>$$ \vec v = v_x\vec i + v_y\vec j + v_z\vec k$$</p>
+                <p>Donde el módulo de la velocidad instantánea será:</p>
+                <p>$$ v = \vert \vec v\vert = \sqrt{v_x^2+v_y^2+v_z^2}$$</p>
             </section>
-            <figure class="centered">
-                <svg id="svg1_3"></svg >
-                <figcaption><b>Figura 1.3</b> Vectorers de posición \(\vec r_1\) y \(\vec r_2\), vector desplazamiento \(\vec \Delta r\) y vectores velocidad \(\vec v_1\) y \(\vec v_2\) de un móvil.</figcaption>
-            </figure>
-            <p>
-                Se define la <strong>velocidad media</strong> \(\vec v_med\) en el intervalo de tiempo \(\Delta t\) como:
-            </p>
-            <p>$$ \vec v_med = \frac{\Delta r}{\Delta t} $$</p>
-            <p>
-                La <strong>velocidad instantánea</strong> \(\vec v) se define como:
-            </p>
-            <p>$$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta r}{\Delta t} $$</p>
-            <p>Es decir, como la rapidez del cambio del vector de posición \(\vec r\) respecto al tiempo.</p>
-            <p>Este vector es tangente a la trayectoria y su sentido es el del movimiento.</p>
+            <section><h3>1.5 Aceleración</h3>
+                <p>
+                    <strong>Aceleración</strong>, en general, es la variación de la velocidad en un intervalo de tiempo. Al ser la velocidad una magnitud vectorial, la aceleración será distinta de cero siempre que la velocidad varíe en su módulo, su dirección o su sentido.
+                </p>
+            </section>
         </article>
     </body>
 </html>
