--- a/vectors_en.html
+++ b/vectors_en.html
@@ -73,7 +73,7 @@
                     A vector is characterized:
                     <ul>
                         <li>
-                            by its <strong>magnitude</strong> (or length), which is equal to the length of the segment \(\overline{AB}\) and is denoted by \(\Vert\vec v\Vert\),
+                            by its <strong>magnitude (or module)</strong>, which is equal to the length of the segment \(\overline{AB}\) and is denoted by \(\Vert\vec v\Vert\),
                         </li>
                         <li>
                             and by its <strong>direction</strong>: from A to B.
