--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -129,19 +129,26 @@
                 <p>
                     Se define la <strong>velocidad media</strong> \(\vec v_{med}\) en el intervalo de tiempo \(\Delta t\) como:
                 </p>
-                <p>$$ \vec v_{med} = \frac{\Delta \vec r}{\Delta t} $$</p>
+                <div class="container">
+                    <div  class="center">\( \vec v_{med} = \frac{\Delta \vec r}{\Delta t}) \)</div>
+                    <div  class="right" id="[1.5]">[1.5]</div>
+                </div>
                 <p>
                     La <strong>velocidad instantánea</strong> \(\vec v\) se define como:
                 </p>
-                <p>$$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta r}{\Delta t} $$</p>
+                <div class="container">
+                    <div  class="center">\( \vec v = \lim_{\Delta t\to 0} \frac{\Delta r}{\Delta t} \)</div>
+                    <div  class="right" id="[1.6]">[1.6]</div>
+                </div>
                 <p>Es decir, como la rapidez del cambio del vector de posición \(\vec r\) respecto al tiempo.</p>
                 <p>Este vector es tangente a la trayectoria y su sentido es el del movimiento.</p>
                 <p>
                     Si referimos la velocidad instantánea a la trayectoria, la velocidad instantánea puede desarrollarse en la forma siguiente:  
                 </p>
-                <p>
-                    $$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \frac{\Delta s}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \lim_{\Delta t\to 0} \frac{\Delta s}{\Delta t}$$
-                </p>
+                <div class="container">
+                    <div  class="center">\( \vec v = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \frac{\Delta s}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \lim_{\Delta t\to 0} \frac{\Delta s}{\Delta t} \)</div>
+                    <div  class="right" id="[1.7]">[1.7]</div>
+                </div>
                 <p>
                     A cada vector desplazamiento \(\Delta \vec r\) le corresponde una longitud de trayectoria \(\Delta s\), para cada intervalo de tiempo \(\Delta t\). Normalmente, \(\Delta s > \vert \Delta \vec r \vert \), pero al considerar intervalos de tiempo \(\Delta t\) que tienden a cero, ambos valores tienden a coincidir. Es decir, si \(\Delta t \to 0\), el arco \(\Delta s \to \) la cuerda \(\vert \Delta \vec r \vert \). Y el primer límite será un vector de módulo unidad, tangente a la trayectoria y sentido el del movimiento. Vector que simbolizaremos por \(\vec \tau\).
                 </p>
@@ -149,20 +156,42 @@
                     El segundo límite es un escalar y representa el módulo de la velocidad instantánea \(\vert \vec r \vert\), se denomina <strong>celeridad</strong> y se representa por \(v\).
                 </p>
                 <p>Así pues,</p>
-                <p>$$ \vec v = v\cdot \vec\tau $$</p>
+                <div class="container">
+                    <div  class="center">\( \vec v = v\cdot \vec\tau \)</div>
+                    <div  class="right" id="[1.8]">[1.8]</div>
+                </div>
                 <p>
                     Si referimos la velocidad instantáne a los componentes del vector posición, podemos expresar la velocidad instantánea de la siguient forma:
                 </p>
-                <p>$$ \vec v = \frac {d\vec r}{dt} = \frac {dx}{dt}\vec i + \frac {dy}{dt}\vec j + \frac {dz}{dt}\vec k$$</p>
+                <div class="container">
+                    <div  class="center">\( \vec v = \frac {d\vec r}{dt} = \frac {dx}{dt}\vec i + \frac {dy}{dt}\vec j + \frac {dz}{dt}\vec k \)</div>
+                    <div  class="right" id="[1.9]">[1.9]</div>
+                </div>
                 <p>O sea,</p>
-                <p>$$ \vec v = v_x\vec i + v_y\vec j + v_z\vec k$$</p>
+                <div class="container">
+                    <div  class="center">\( \vec v = v_x\vec i + v_y\vec j + v_z\vec k \)</div>
+                    <div  class="right" id="[1.10]">[1.10]</div>
+                </div>
                 <p>Donde el módulo de la velocidad instantánea será:</p>
-                <p>$$ v = \vert \vec v\vert = \sqrt{v_x^2+v_y^2+v_z^2}$$</p>
+                <div class="container">
+                    <div  class="center">\( v = \vert \vec v\vert = \sqrt{v_x^2+v_y^2+v_z^2} \)</div>
+                    <div  class="right" id="[1.11]">[1.11]</div>
+                </div>
             </section>
             <section><h3>1.5 Aceleración</h3>
                 <p>
                     <strong>Aceleración</strong>, en general, es la variación de la velocidad en un intervalo de tiempo. Al ser la velocidad una magnitud vectorial, la aceleración será distinta de cero siempre que la velocidad varíe en su módulo, su dirección o su sentido.
                 </p>
+                <p>
+                    Para determinar el movimiento de una partícula, es neceserio saber cómo se produce la variación de la aceleración en el transcurso del tiempo. Para ello introducimos los conceptos de aceleración media y aceleración media.
+                </p>
+                <p>
+                    La <strong>aceleración media</strong> representa lo que varía la velocidad en cada unidad de tiempo, o el vector que resulta de dividir la variación de velocidad en un intervalo de tiempo dado entre dicho intervalo.
+                </p>
+                <div class="container">
+                    <div  class="center">\( \vec a = \frac{\Delta\vec v}{\Delta t} = \frac{\Delta v_x}{\Delta t}\vec i +  \frac{\Delta v_y}{\Delta t}\vec j +  \frac{\Delta v_z}{\Delta t}\vec k \)</div>
+                    <div  class="right" id="[1.12]">[1.12]</div>
+                </div>
             </section>
         </article>
     </body>
