--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -130,14 +130,14 @@
                     Se define la <strong>velocidad media</strong> \(\vec v_{med}\) en el intervalo de tiempo \(\Delta t\) como:
                 </p>
                 <div class="container">
-                    <div  class="center">\( \vec v_{med} = \frac{\Delta \vec r}{\Delta t}) \)</div>
+                    <div  class="center">\( \vec v_{med} = \frac{\Delta \vec r}{\Delta t} \)</div>
                     <div  class="right" id="[1.5]">[1.5]</div>
                 </div>
                 <p>
                     La <strong>velocidad instantánea</strong> \(\vec v\) se define como:
                 </p>
                 <div class="container">
-                    <div  class="center">\( \vec v = \lim_{\Delta t\to 0} \frac{\Delta r}{\Delta t} \)</div>
+                    <div  class="center">$$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta r}{\Delta t} $$</div>
                     <div  class="right" id="[1.6]">[1.6]</div>
                 </div>
                 <p>Es decir, como la rapidez del cambio del vector de posición \(\vec r\) respecto al tiempo.</p>
