--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -130,7 +130,7 @@
                     Se define la <strong>velocidad media</strong> \(\vec v_{med}\) en el intervalo de tiempo \(\Delta t\) como:
                 </p>
                 <div class="container">
-                    <div  class="center">\( \vec v_{med} = \frac{\Delta \vec r}{\Delta t} \)</div>
+                    <div  class="center">$$ \vec v_{med} = \frac{\Delta \vec r}{\Delta t} $$</div>
                     <div  class="right" id="[1.5]">[1.5]</div>
                 </div>
                 <p>
@@ -146,7 +146,7 @@
                     Si referimos la velocidad instantánea a la trayectoria, la velocidad instantánea puede desarrollarse en la forma siguiente:  
                 </p>
                 <div class="container">
-                    <div  class="center">\( \vec v = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \frac{\Delta s}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \lim_{\Delta t\to 0} \frac{\Delta s}{\Delta t} \)</div>
+                    <div  class="center">$$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \frac{\Delta s}{\Delta t} = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta s}\cdot \lim_{\Delta t\to 0} \frac{\Delta s}{\Delta t} $$</div>
                     <div  class="right" id="[1.7]">[1.7]</div>
                 </div>
                 <p>
@@ -157,24 +157,24 @@
                 </p>
                 <p>Así pues,</p>
                 <div class="container">
-                    <div  class="center">\( \vec v = v\cdot \vec\tau \)</div>
+                    <div  class="center">$$ \vec v = v\cdot \vec\tau $$</div>
                     <div  class="right" id="[1.8]">[1.8]</div>
                 </div>
                 <p>
                     Si referimos la velocidad instantáne a los componentes del vector posición, podemos expresar la velocidad instantánea de la siguient forma:
                 </p>
                 <div class="container">
-                    <div  class="center">\( \vec v = \frac {d\vec r}{dt} = \frac {dx}{dt}\vec i + \frac {dy}{dt}\vec j + \frac {dz}{dt}\vec k \)</div>
+                    <div  class="center">$$ \vec v = \frac {d\vec r}{dt} = \frac {dx}{dt}\vec i + \frac {dy}{dt}\vec j + \frac {dz}{dt}\vec k $$</div>
                     <div  class="right" id="[1.9]">[1.9]</div>
                 </div>
                 <p>O sea,</p>
                 <div class="container">
-                    <div  class="center">\( \vec v = v_x\vec i + v_y\vec j + v_z\vec k \)</div>
+                    <div  class="center">$$ \vec v = v_x\vec i + v_y\vec j + v_z\vec k $$</div>
                     <div  class="right" id="[1.10]">[1.10]</div>
                 </div>
                 <p>Donde el módulo de la velocidad instantánea será:</p>
                 <div class="container">
-                    <div  class="center">\( v = \vert \vec v\vert = \sqrt{v_x^2+v_y^2+v_z^2} \)</div>
+                    <div  class="center">$$ v = \vert \vec v\vert = \sqrt{v_x^2+v_y^2+v_z^2} $$</div>
                     <div  class="right" id="[1.11]">[1.11]</div>
                 </div>
             </section>
@@ -189,7 +189,7 @@
                     La <strong>aceleración media</strong> representa lo que varía la velocidad en cada unidad de tiempo, o el vector que resulta de dividir la variación de velocidad en un intervalo de tiempo dado entre dicho intervalo.
                 </p>
                 <div class="container">
-                    <div  class="center">\( \vec a = \frac{\Delta\vec v}{\Delta t} = \frac{\Delta v_x}{\Delta t}\vec i +  \frac{\Delta v_y}{\Delta t}\vec j +  \frac{\Delta v_z}{\Delta t}\vec k \)</div>
+                    <div  class="center">$$ \vec a = \frac{\Delta\vec v}{\Delta t} = \frac{\Delta v_x}{\Delta t}\vec i +  \frac{\Delta v_y}{\Delta t}\vec j +  \frac{\Delta v_z}{\Delta t}\vec k $$</div>
                     <div  class="right" id="[1.12]">[1.12]</div>
                 </div>
             </section>
