--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -43,7 +43,7 @@
                     En este artículo, dedicado a la <strong>cinemática</strong>, estudiamos el movimiento de los cuerpos físicos sin considerar las causas que lo producen. Este objetivo estará conseguido cuando sepamos en cada instante donde se encuentra el cuerpo que se mueve y cómo se mueve. Debemos obtener, por tanto, una ecuación que relacione la posición del cuerpo con el tiempo.
                 </p>
                 <p>
-                    Para reducir la complejidad y centrarnos en los conceptos básicos de la cinemática, en lugar de estudiar el movimiento de cualquier cuerpo, comenzaremos estudiando el movimiento de un <strong>punto material</strong>; con el cual representamos a veces, de modo burdo, a un cuerpo. Y le definimos como un punto geométrico en el que consideramos que está concentrada toda la masa del cuerpo.
+                    Para reducir la complejidad y centrarnos en los conceptos básicos de la cinemática, en lugar de estudiar el movimiento de cualquier cuerpo, comenzaremos estudiando el movimiento de un <strong>punto material</strong> o <strong>partícula</strong>; con el cual representamos a veces, de modo burdo, a un cuerpo. Y le definimos como un punto geométrico en el que consideramos que está concentrada toda la masa del cuerpo.
                 </p>
             </section>
             <section><h3> 1.2 Movimiento y trayectoria</h3>
@@ -137,7 +137,7 @@
                     La <strong>velocidad instantánea</strong> \(\vec v\) se define como:
                 </p>
                 <div class="container">
-                    <div  class="center">$$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta r}{\Delta t} $$</div>
+                    <div  class="center">$$ \vec v = \lim_{\Delta t\to 0} \frac{\Delta \vec r}{\Delta t} = \frac{d \vec r}{d t} $$</div>
                     <div  class="right" id="[1.6]">[1.6]</div>
                 </div>
                 <p>Es decir, como la rapidez del cambio del vector de posición \(\vec r\) respecto al tiempo.</p>
@@ -191,6 +191,13 @@
                 <div class="container">
                     <div  class="center">$$ \vec a = \frac{\Delta\vec v}{\Delta t} = \frac{\Delta v_x}{\Delta t}\vec i +  \frac{\Delta v_y}{\Delta t}\vec j +  \frac{\Delta v_z}{\Delta t}\vec k $$</div>
                     <div  class="right" id="[1.12]">[1.12]</div>
+                </div>
+                <p>
+                    La <strong>aceleración instantánea</strong> es la aceleración que tiene la partícula en cualquier instante \(t\), o en cualquier punto de la trayectoria \(s=f(t)\). De modo que podemos expresar la aceleración instantánea como el valor límite de la aceleración media cuando el intervalo de tiempo tiende a cero.
+                </p>
+                <div class="container">
+                    <div  class="center">$$ \vec a = \lim_{\Delta t\to 0} \frac{\Delta \vec v}{\Delta t} = \frac{d \vec v}{d t} $$</div>
+                    <div  class="right" id="[1.13]">[1.13]</div>
                 </div>
             </section>
         </article>
