--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -219,6 +219,16 @@
                     <div  class="center">$$ \Delta \vec v = \Delta\vec v_{\tau} + \Delta\vec v_{\mu}  $$</div>
                     <div  class="right" id="[1.16]">[1.16]</div>
                 </div>
+                <p>La aceleración media sería:</p>
+                <div class="container">
+                    <div  class="center">$$ \frac{\Delta \vec v}{\Delta t} = \frac{\Delta\vec v_{\tau}}{\Delta t} + \frac{\Delta\vec v_{\mu}}{\Delta t}  $$</div>
+                    <div  class="right" id="[1.17]">[1.17]</div>
+                </div>
+                <p>Y la aceleración instantánea sería:</p>
+                <div class="container">
+                    <div  class="center">$$ \vec a = \lim_{\Delta t\to 0} \frac{\Delta \vec v}{\Delta t} = \lim_{\Delta t\to 0}\frac{\Delta\vec v_{\tau}}{\Delta t} + \lim_{\Delta t\to 0}\frac{\Delta\vec v_{\mu}}{\Delta t} = \vec a_{\tau} + \vec a_{\mu} = a_{\tau}\vec {\tau} + a_{\mu}\vec {\mu} $$</div>
+                    <div  class="right" id="[1.18]">[1.18]</div>
+                </div>
             </section>
         </article>
     </body>
