--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -229,6 +229,9 @@
                     <div  class="center">$$ \vec a = \lim_{\Delta t\to 0} \frac{\Delta \vec v}{\Delta t} = \lim_{\Delta t\to 0}\frac{\Delta\vec v_{\tau}}{\Delta t} + \lim_{\Delta t\to 0}\frac{\Delta\vec v_{\mu}}{\Delta t} = \vec a_{\tau} + \vec a_{\mu} = a_{\tau}\vec {\tau} + a_{\mu}\vec {\mu} $$</div>
                     <div  class="right" id="[1.18]">[1.18]</div>
                 </div>
+                <p>
+                    Entonces, la aceleración instantánea se puede espresar mediante las <strong>componentes intrínsecas de la aceleración</strong> como la suma de dos aceleraciones, una en la dirección tangente a la trayectoria (<strong>aceleración tangencial</strong>) y otra en la dirección normal a la trayectoria(<strong>aceleración normal</strong>) en cada punto de dicha trayectoria.
+                </p>
             </section>
         </article>
     </body>
