--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -232,6 +232,10 @@
                 <p>
                     Entonces, la aceleración instantánea se puede espresar mediante las <strong>componentes intrínsecas de la aceleración</strong> como la suma de dos aceleraciones, una en la dirección tangente a la trayectoria (<strong>aceleración tangencial</strong>) y otra en la dirección normal a la trayectoria(<strong>aceleración normal</strong>) en cada punto de dicha trayectoria.
                 </p>
+                <figure class="centered">
+                    <svg id="svg1_4"></svg >
+                    <figcaption><b>Figura 1.4</b> Variación de la velocidad en una trayectoria curva.</figcaption>
+                </figure>
             </section>
         </article>
     </body>
