--- a/geometry_es.html
+++ b/geometry_es.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <h1 id="Home">2. GEOMETRÍA</h1>
+        <h1 id="Home">GEOMETRÍA</h1>
     </header>
     </div>
 		<!--<select id="langSelector">
@@ -38,12 +38,12 @@
 		</ul>
 	</nav>
 
-    <section><h3 id="Introducción">1.1 Introducción</h3>
+    <section><h3 id="Introducción">1 Introducción</h3>
         <p>
             En este capítulo, mostramos conceptos sobre geometría que se utilizarán a lo largo del sitio web.
         </p>
     </section>
-    <section><h3>2.2Teorema de Pitágoras</h3>
+    <section><h3>2Teorema de Pitágoras</h3>
         <p>
             En cualquier triángulo rectángulo \(\triangle ABC\), donde c es la longitud de la hipotenusa y a y b son las longitudes de los catetos,
         </p>
@@ -51,14 +51,14 @@
         </p>
         <div class="container">
             <div  class="center">\(a^2 + b^2 = c^2\)</div>
-            <div  class="right" id="[2.1]">[2.2]</div>
+            <div  class="right" id="[1]">[2]</div>
         </div>
         <figure class="centered"><!--Right triangle with hypotenuse c and legs a and b.-->
             <img src="images\RightTriangle.svg" width="300" height="225" />
-            <figcaption><b>Figura 2.1</b> Triángulo rectángulo con catetos a y b, e hipotenusa c.</figcaption>
+            <figcaption><b>Figura 1</b> Triángulo rectángulo con catetos a y b, e hipotenusa c.</figcaption>
         </figure>
     </section>
-    <section><h3>2.3 Definiciones gráficas de las funciones seno, coseno y tangente</h3>
+    <section><h3>3 Definiciones gráficas de las funciones seno, coseno y tangente</h3>
         <p>
             Consideremos una circunferencia con radio de longitud r con centro en el origen <i>O</i> en a sistema de coordenadas rectangulares, y un punto P con coordenadas (x,y) en la circunferencia. Y nombremos &alpha; a el ángulo entre el eje x y el segmento \(\overline {OP}\), según se muestra en la siguiente figura. Entonces, \(\sin \alpha\) es el cociente y/r.
         </p>
@@ -72,15 +72,15 @@
         </p>
         <div class="container">
             <div  class="center">\(\sin \alpha  = y/r\)</div>
-            <div  class="right" id="[2.2]">[2.2]</div>
+            <div  class="right" id="[2]">[2]</div>
         </div><br>
         <div class="container">
             <div  class="center">\(\cos \alpha = x/r\) </div>
-            <div  class="right" id="[2.3]">[2.3]</div>
+            <div  class="right" id="[3]">[3]</div>
         </div><br>
         <div class="container">
             <div  class="center">\(\tan \alpha = y/x\) </div>
-            <div  class="right" id="[2.4]">[2.4]</div>
+            <div  class="right" id="[4]">[4]</div>
         </div><br>
     </section>
     <aside><h4>Referencias</h4>
