--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -107,7 +107,7 @@
                     <div  class="right" id="[1.4]">[1.4]</div>
                 </div>
                 <p>
-                    where \(\Delta x\), \(\Delta y\) and \(\Delta z\) represent how the coordinates of the point vary in the time interval considered.
+                    where \(\Delta x\), \(\Delta y\) and \(\Delta z\) represents how the coordinates of the point vary in the time interval considered.
                 </p>
                 <p>
                     If the body moves in a straight line, and without changing the direction of its movement, the magnitude of the displacement vector coincides with the distance traveled by the body. However, this only applies in these circumstances, because the displacement vector does not depend on the path followed by the object, only on the initial and final points.
