--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -28,7 +28,7 @@
             <option value="en">English</option>
             <option value="es">Español</option>
         </select>-->
-        <header><h1>CINEMATICS</h1></header>
+        <header><h1>KINEMATICS</h1></header>
         <nav>
 			<ul>
             	<li><a href="index.html">Home</a></li>
