--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -221,7 +221,7 @@
                     <div  class="center">$$ \Delta \vec v = \Delta\vec v_{\tau} + \Delta\vec v_{\mu}  $$</div>
                     <div  class="right" id="[1.16]">[1.16]</div>
                 </div>
-                <p>La aceleración media sería:</p>
+                <p>The average acceleration would be:</p>
                 <div class="container">
                     <div  class="center">$$ \frac{\Delta \vec v}{\Delta t} = \frac{\Delta\vec v_{\tau}}{\Delta t} + \frac{\Delta\vec v_{\mu}}{\Delta t}  $$</div>
                     <div  class="right" id="[1.17]">[1.17]</div>
