--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -226,7 +226,7 @@
                     <div  class="center">$$ \frac{\Delta \vec v}{\Delta t} = \frac{\Delta\vec v_{\tau}}{\Delta t} + \frac{\Delta\vec v_{\mu}}{\Delta t}  $$</div>
                     <div  class="right" id="[1.17]">[1.17]</div>
                 </div>
-                <p>Y la aceleración instantánea sería:</p>
+                <p>And the instantaneous acceleration would be:</p>
                 <div class="container">
                     <div  class="center">$$ \vec a = \lim_{\Delta t\to 0} \frac{\Delta \vec v}{\Delta t} = \lim_{\Delta t\to 0}\frac{\Delta\vec v_{\tau}}{\Delta t} + \lim_{\Delta t\to 0}\frac{\Delta\vec v_{\mu}}{\Delta t} = \vec a_{\tau} + \vec a_{\mu} = a_{\tau}\vec {\tau} + a_{\mu}\vec {\mu} $$</div>
                     <div  class="right" id="[1.18]">[1.18]</div>
