--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles/styles.css">
-        <title>TheHouseOfPhi Cinematics</title>
+        <title>TheHouseOfPhi Kinematics</title>
         <meta name="author" content="Miguel Angel Alvaro">
         <meta name="description"
             content="Subpage showing information about vectors."
@@ -232,11 +232,11 @@
                     <div  class="right" id="[1.18]">[1.18]</div>
                 </div>
                 <p>
-                    Entonces, la aceleración instantánea se puede espresar mediante las <strong>componentes intrínsecas de la aceleración</strong> como la suma de dos aceleraciones, una en la dirección tangente a la trayectoria (<strong>aceleración tangencial</strong>) y otra en la dirección normal a la trayectoria(<strong>aceleración normal</strong>) en cada punto de dicha trayectoria.
+                    Then, the instantaneous acceleration can be expressed by the <strong>intrinsic components of acceleration</strong> as the sum of two accelerations, one in the direction tangent to the trajectory (<strong>tangential acceleration</strong>) and the other in the direction normal to the trajectory (<strong>normal acceleration</strong>) at each point of said trajectory.
                 </p>
                 <figure class="centered">
                     <svg id="svg1_4"></svg >
-                    <figcaption><b>Figura 1.4</b> Variación de la velocidad en una trayectoria curva.</figcaption>
+                    <figcaption><b>Figure 1.4</b> Variation of velocity in a curved path.</figcaption>
                 </figure>
             </section>
         </article>
